files and github link

--- a/potentiale.html
+++ b/potentiale.html
@@ -19,7 +19,7 @@
             <a href="index.html">Simon</a>
             <a href="potentiale.html" class="active">POTENTIALE</a>
             <a href="fridom.html">FRIDOM</a>
-            <a href="https:github.com/siinch" target="_blank" rel="noopener noreferrer">GITHUB</a>
+            <a href="https://github.com/altpaaspil" target="_blank" rel="noopener noreferrer">GITHUB</a>
             <a href="javascript:void(0);" class="icon" onclick="myFunction()">
               <i class="fa fa-bars"></i>
             </a>
